# terrakettle

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  terrakettle.py
.github/workflows/: ci.yml  publish.yml
scripts/: build-push.sh  push.py
src/terrakettle/: __init__.py  __main__.py  api.py  app.py  auth.py  badge.py  compare.py  config.py  db.py  feed.py  metrics.py  notify.py  retention.py  schemas.py  storage.py  templating.py  web.py
src/terrakettle/templates/: base.html  compare.html  index.html  login.html  no_report.html  project.html  run.html
tests/: conftest.py  test_admin.py  test_badge_feed_compare_ops.py  test_push.py  test_retention_and_viewauth.py  test_web_serving.py
