[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terrakettle"
version = "0.1.0"
description = "Report store and viewer for Terrahawk infrastructure scans"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "WeCloud" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
azure = ["azure-storage-blob>=12.19"]
gcp = ["google-cloud-storage>=2.16"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
terrakettle = "terrakettle.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terrakettle = ["templates/*.html", "static/*"]
