[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "terrakettle"
version = "0.1.0"
description = "Report store and viewer for Terrahawk infrastructure scans"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "WeCloud" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # boto3 is a base dependency: the credential-free default backend talks S3
    # to a bundled versitygw gateway, and "s3" targets AWS or any S3-compatible
    # store. azure/gcp SDKs stay optional extras.
    "boto3>=1.34",
]

[project.optional-dependencies]
# boto3 is already a base dependency; this extra is kept so the `aws` Docker
# variant (--build-arg CLOUD=aws -> pip install ".[aws]") resolves.
aws = ["boto3>=1.34"]
azure = ["azure-storage-blob>=12.19", "azure-identity>=1.15"]
gcp = ["google-cloud-storage>=2.16"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
terrakettle = "terrakettle.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
terrakettle = ["templates/*.html", "static/*"]
